# payfree

./: .env.example  Cargo.toml  Dockerfile  README.Docker.md  README.md  api.md  compose.yaml
migrations/: 0001_payfree_tables.sql
src/: main.rs
src/http/: db.rs  errors.rs  mod.rs  passwd.rs  routes.rs
src/http/db/: model.rs  queries.rs
src/http/jwt/: extractor.rs  mod.rs
tests/: integration.rs
