[package]
name = "payfree"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.98"
argon = "0.1.0"
argon2 = "0.5.3"
dotenvy = "0.15.7"
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
