[package]
name = "payfree"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4"
anyhow = "1.0.98"
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    # "tls-native-tls",
    "uuid",
    "chrono",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }


[lib]
path = "src/lib.rs"
